@@ -3,6 +3,7 @@ BuildingsPy Changelog
 
 Version 1.5.1, xxxx -- Release 1.5
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+- In development.regressiontest, added check for redundant connections.
 - Updated buildingspy.development.refactor.move_class()
   to allow moving whole packages.
 - Updated buildingspy.development.refactor.write_package_order()
